--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+.nav-form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px 50px 0px 50px;
+    justify-content: space-between;
+    position: fixed;
+    width: 70%;
+    left: 30%;
+    top: 5vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-form > button {
+    margin-left: 10px;
+    margin-top: 7px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+html {
+    width: 100%;
+    height: 100%;
+    font-family: "Poppins",sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.search-button {
+    border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-button:active,.search-button:hover {
+    background-color: rgba(0,0,0,0.15);
+}
+
+.search-bar {
+    width: 100%;
+    border: none;
+    background-color: rgba(0,0,0,0.15);
+    height: 35px;
+    border-radius: 10px;
+}
+
+.search-bar:focus {
+    outline: none;
+}
+
+.sidebar {
+    width: 28%;
+    height: 90%;
+    background-color: rgba(0,0,0,0.15);
+    position: absolute;
+    top: 5vh;
+    left: 5vh;
+    border-radius: 20px;
+}
+
+.search-result {
+    width: 90%;
+    height: 100px;
+    background-color: rgba(0,0,0,0.15);
+    margin-bottom: 10px;
+    border-radius: 15px;
+    flex-basis: 100px;
+    flex-shrink: 0;
+}
+
+.results {
+    display: flex;
+    position: fixed;
+    left: 33%;
+    top: 13%;
+    width: 70%;
+    height: 80%;
+    flex-direction: column;
+    overflow-y: scroll;
 }
