--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,11 +27,11 @@ html {
     font-family: "Poppins",sans-serif;
 }
 
-.search-button {
+.button {
     border: none;
 }
 
-.search-button:active,.search-button:hover {
+.button:active,.button:hover {
     background-color: rgba(0,0,0,0.15);
 }
 
@@ -80,4 +80,37 @@ html {
 
 .logo {
     width:50px;
+}
+
+.details-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  background-color: rgba(0,0,0,0.15);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 10%;
+}
+
+.back {
+    background-color: rgba(0,0,0,0.1);
+}
+
+.flex-left {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.stats{
+    position: fixed;
+    top: 10%;
+    left:0;
+    padding:20px;
+    height:90%;
+    overflow: scroll;
+    width: 100%;
 }
