--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,6 +19,7 @@ body {
     width: 100%;
     height: 100%;
     background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    color: white;
 }
 
 html {
@@ -41,6 +42,7 @@ html {
     background-color: rgba(0,0,0,0.15);
     height: 35px;
     border-radius: 10px;
+    color: white;
 }
 
 .search-bar:focus {
