--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,7 +18,7 @@
 body {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    background-color: black;
     color: white;
 }
 
@@ -30,16 +30,17 @@ html {
 
 .button {
     border: none;
+    color: white;
 }
 
 .button:active,.button:hover {
-    background-color: rgba(0,0,0,0.15);
+    background-color: rgb(20,20,20);
 }
 
 .search-bar {
     width: 100%;
     border: none;
-    background-color: rgba(0,0,0,0.15);
+    background-color: rgb(20,20,20);
     height: 35px;
     border-radius: 10px;
     color: white;
@@ -52,7 +53,7 @@ html {
 .sidebar {
     width: 28%;
     height: 90%;
-    background-color: rgba(0,0,0,0.15);
+    background-color: rgb(20,20,20);
     position: absolute;
     top: 5vh;
     left: 5vh;
@@ -62,7 +63,7 @@ html {
 .search-result {
     width: 90%;
     height: 100px;
-    background-color: rgba(0,0,0,0.15);
+    background-color: rgb(20,20,20);
     margin-bottom: 10px;
     border-radius: 15px;
     flex-basis: 100px;
@@ -81,7 +82,7 @@ html {
 }
 
 .logo {
-    width:50px;
+    height: 35px;
 }
 
 .details-nav {
@@ -90,7 +91,7 @@ html {
   left: 0;
   width: 100%;
   padding: 10px;
-  background-color: rgba(0,0,0,0.15);
+  background-color: rgb(15,15,15);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -98,13 +99,18 @@ html {
 }
 
 .back {
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(255,255,255,0.05);
 }
 
 .flex-left {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+}
+
+.flex-left * {
+    margin-right: 5px;
 }
 
 .stats{
@@ -113,6 +119,127 @@ html {
     left:0;
     padding:20px;
     height:90%;
-    overflow: scroll;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 90%;
+    width: 100%;
+}
+
+.chart {
+    height: 120%;
+    overflow: hidden;
+    pointer-events: none;
+    position: relative;
+}
+
+.chart canvas {
+    pointer-events: all;
+}
+
+.section {
+    margin-top: 10px;
+    flex-basis: 50%;
+    flex-shrink: 0;
+    overflow: scroll;
+}
+
+.section h6 {
+    position: absolute;
+    top: 10%;
+    width: 100%;
+    text-align: center;
+}
+
+.search-heading div {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.search-heading {
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo.flag {
+    height: 25px;
+    margin-left: 5px;
+}
+
+.search-result h5 {
+    padding-left: 5px;
+}
+
+.button-div {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.button-div button {
+    margin-right: 5px;
+}
+
+table {
+    margin: auto;
+}
+
+.table-row {
+    border-bottom: black 2px solid;
+    height: 35px;
+}
+
+.table-row th,.table-row td {
+    text-align: right;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-right: black 1px solid;
+    border-radius: 5px;
+    background-color: rgb(20,20,20);
+}
+
+.table-row th:nth-of-type(1),.table-row td:nth-of-type(1) {
+    width: 35%;
+    text-align: left;
+}
+
+.table-row th:nth-of-type(4) {
+    text-align: left;
+}
+
+.percentile-cell {
+    width: 220px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.table-row th:nth-of-type(4) {
+    width: 230px;
+}
+
+.percentile {
+    width: 150px;
+    height: 15px;
+    flex-basis: 150px;
+    flex-shrink: 0;
+    border: rgba(255,255,255,0.1) 1px solid;
+}
+
+.percentile * {
+    height: 100%;
 }
